--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -475,7 +475,7 @@ footer p {
     color: #000; 
 }
 .hero p{
-font-size: px;
+font-size: 16px;
 color: #030000;
 }
 
@@ -490,24 +490,24 @@ color: #030000;
     padding: 80px;
 }
 .newsletter h2{
-    font-size: 24;
+    font-size: 24px;
     color: #4707db;
     text-align: center;
 }
 .form .input type {
-    font-size: 2;
+    font-size: 24px;
     color: #4707db;
 }
 
 .cta h2{
-    font-size: 24;
+    font-size: 24px;
     color: #070114;
     height: auto;
     padding: 10px;
     text-align: center;
 }
 .cta p{
-    font-size: 24;
+    font-size: 24px;
     color: #e20736;
     height: auto;
     padding: 18px;
